[package]
name = "ideco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
egui = { version = "0.29.1", features = ["persistence"] }
eframe = { version = "0.29.1", features = ["persistence"] }
rand = "0.8.5"
nom = "7.1.3"
pyo3 = { version = "0.22.2", features = ["gil-refs", "auto-initialize"] }
debug-cell = "0.1.1"
crossterm = "0.28.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
markdown = "1.0.0-alpha.21"
tinyjson = "2.5.1"

# [features]
# all_loaders = ["egui_extras"]
